12605
Inconsistent, yet it's almost a feature, except for pattern matching:
{code}
scala> case class C(implicit c: Int)
defined class C

scala> implicit val i: Int = 42
i: Int = 42

scala> C() match { case x @ C() => x }
res0: C = C(42)

scala> C() match { case x @ C(i) => i }
<console>:15: error: wrong number of arguments for pattern C()
       C() match { case x @ C(i) => i }
                             ^

{code}
